cabal-version:      3.0
name:               kshk
version:            0.0.1
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable kshk
    import: warnings
    main-is: Court.hs
    other-modules: Executioner, Types, Judge
    build-depends: base, haskeline, parsec, process, containers
    hs-source-dirs:   src
    default-language: Haskell2010
