cabal-version:      3.0
name:               kshk
version:            0.0.1
build-type:         Simple

common warnings
    ghc-options: -Wall

executable kshk
    import: warnings
    main-is: Main.hs
    other-modules: Owl, Cat, Tree, Spearfish
    build-depends: base, haskeline, parsec, process, containers
    hs-source-dirs:   src
    default-language: Haskell2010
